--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <img src="C:\Users\mallh\Desktop\Productly\button.png" alt="">
             </div>
-            <div class="image"><img src="C:\Users\mallh\Desktop\Productly\header_image\image.png" alt="">
+            <div class="image"><img src="https://www.figma.com/file/V9bdauqHzPhBk06Ztm0O1e/productly?node-id=0%3A700" alt="">
             </div>
         </div>
         <div class="feature">
